@@ -26,3 +26,4 @@
    3-Mar-2021  - V0.34 Update search criteria and update dependencies
    9-Jun-2021  - V0.35 Update installation configuration and update dependencies
   10-Aug-2021  - V0.37 Update FastAPI dependencies
+   8-Feb-2022  - V0.38 Change /healthcheck and /alive endpoint return value to True
